--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.19.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "pdfkit": "^0.17.2",
     "xss": "^1.0.15",
     "xss-clean": "^0.1.4"
   }
