--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.4",
-    "better-sqlite3": "^12.6.2",
     "cheerio": "^1.2.0",
     "compression": "^1.8.1",
     "connect-sqlite3": "^0.9.16",
@@ -27,6 +26,7 @@
     "express-session": "^1.19.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "mysql2": "^3.17.4",
     "pdfkit": "^0.17.2",
     "xss": "^1.0.15",
     "xss-clean": "^0.1.4"
